Add optimization flags in jdtls.sh launch script